Starting new design with parallel fifo queues
